# py_load_pmda

./: .coverage  NOTICE  create_excel.py  download_real_pdf.py  pytest.ini
.github/workflows/: ci.yml
py-load-pmda/: .gitignore  FRD_COMPLIANCE_ANALYSIS.md  NOTICE  README.md  analyze_pdf.py  config.yaml  create_dummy_excel.py  create_test_excel.py  prepare_test_fixture.py  pyproject.toml  search_result.html
py-load-pmda/cache/: approvals_2025.xlsx
py-load-pmda/src/py_load_pmda/: alerting.py  cli.py  config.py  extractor.py  interfaces.py  logging_config.py  orchestrator.py  parser.py  schemas.py  transformer.py  utils.py  validator.py
py-load-pmda/src/py_load_pmda/adapters/: bigquery.py  postgres.py  redshift.py
py-load-pmda/src/py_load_pmda/alerters/: base.py  log.py  slack.py
py-load-pmda/tests/: conftest.py  test_alerting.py  test_bigquery_adapter.py  test_cli.py  test_cli_integration.py  test_config.py  test_config_errors.py  test_etl_approvals.py  test_etl_approvals_full_integration.py  test_etl_approvals_integration.py  test_etl_jader.py  test_etl_jader_merge.py  test_etl_package_inserts.py  test_etl_review_reports.py  test_extractor.py  test_extractor_approvals.py  test_extractor_approvals_edge_cases.py  test_extractor_jader.py  test_extractor_package_inserts.py  test_extractor_review_reports.py  test_logging.py  test_main.py  test_orchestrator.py  test_parser.py  test_parser_approvals_edge_cases.py  test_postgres_adapter.py  test_postgres_adapter_integration.py  test_postgres_adapter_merge.py  test_redshift_adapter.py  test_slack_alerter.py  test_utils.py  test_validator.py  test_validator_integration.py
py-load-pmda/tests/fixtures/: approvals_2024_page.html  approvals_2025.xlsx  approvals_2025_page.html  approvals_main_page.html  create_fixture.py  jader_info_page.html  package_inserts_search_results.html  pmda_test_report.xml  review_reports_search_results.html  sample_review_report_search.html  sample_review_report_search_fixed.html
src/py_load_pmda/: cli.py  config.py  extractor.py  interfaces.py  logging_config.py  parser.py  schemas.py  transformer.py  utils.py
src/py_load_pmda/adapters/: postgres.py
tests/: conftest.py  test_approvals_integration.py  test_cli.py  test_etl_jader.py  test_extractor.py  test_jader_parser.py  test_jader_transformer.py  test_parser.py  test_schemas.py  test_transformer.py  test_utils.py
tests/fixtures/: CASE.csv  approvals_2025_page.html  approvals_main_page.html  empty.xlsx
