[project]
name = "py-load-pmda"
version = "0.1.0"
description = "A Python package for ETL of regulatory data from the Japanese PMDA."
authors = [
    {name = "Gowtham Rao", email = "rao@ohdsi.org"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.2,<3.0.0",
    "typer[all]>=0.17.4,<0.18.0",
    "PyYAML>=6.0,<7.0",
    "requests>=2.31.0,<3.0.0",
    "beautifulsoup4>=4.12.3,<5.0.0",
    "openpyxl>=3.1.2,<4.0.0",
    "tabula-py>=2.9.0,<3.0.0",
    "chardet>=5.2.0,<6.0.0",
    "pdfplumber>=0.10.3,<0.11.0",
    "pypdf>=4.0.0,<5.0.0"
]

[project.optional-dependencies]
postgres = [
    "psycopg2-binary>=2.9.9,<3.0.0"
]

[project.scripts]
py-load-pmda = "py_load_pmda.cli:app"

[tool.poetry]
packages = [{include = "py_load_pmda", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.12.0"
requests-mock = "^1.12.1"
typer = {extras = ["all"], version = "^0.17.4"}
psycopg2-binary = ">=2.9.9,<3.0.0"
python-dotenv = "^1.0.0"
ruff = "^0.5.5"
mypy = "^1.11.0"
pandas-stubs = "^2.0.0"
types-psycopg2 = "^2.9.21"
types-PyYAML = "^6.0.12"
types-requests = "^2.31.0"
types-beautifulsoup4 = "^4.12.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Set the maximum line length to 100.
line-length = 100
# Enable the isort rules.

[tool.ruff.lint]
# A sensible default set of rules
select = ["E4", "E7", "E9", "F", "W", "I"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
strict = true
